# suaegi

./: .gitignore  Cargo.toml
crates/suaegi-app/: Cargo.toml
crates/suaegi-app/benches/: render_paths.rs
crates/suaegi-app/src/: background.rs  diff_panel.rs  external_editor.rs  forge_tasks.rs  forge_ui.rs  git_tasks.rs  keybinding_adapter.rs  layout.rs  lib.rs  main.rs  persistence_thread.rs  pr_panel.rs  presence_poll.rs  prompt_inject.rs  reaper.rs  session_store.rs  sidebar.rs  state.rs  tracker_tasks.rs  tracker_ui.rs  workbench.rs
crates/suaegi-app/src/agent_status/: contract.rs  inject.rs  mod.rs  parse.rs  server.rs  subscription.rs  title.rs
crates/suaegi-app/src/terminal/: contract.rs  input.rs  mod.rs  mouse.rs  palette.rs  render.rs  state.rs
crates/suaegi-app/tests/: git_tasks_test.rs  pane_grid_behavior.rs  persistence_thread_test.rs  session_store_test.rs  terminal_focus.rs  terminal_widget.rs
crates/suaegi-app/tests/harness/: mod.rs
crates/suaegi-app/tests/platform/: mod.rs
crates/suaegi-automation/: Cargo.toml
crates/suaegi-automation/src/: classify.rs  cron.rs  lib.rs  occurrence.rs  retention.rs  rrule.rs
crates/suaegi-automation/tests/: classify_test.rs  cron_test.rs  occurrence_dst_test.rs  occurrence_test.rs  retention_test.rs  rrule_test.rs
crates/suaegi-core/: Cargo.toml
crates/suaegi-core/src/: domain.rs  lib.rs  persistence.rs
crates/suaegi-forge/: Cargo.toml
crates/suaegi-forge/src/: any.rs  classify.rs  eligibility.rs  github.rs  lib.rs  parse.rs  pr_actions.rs  provider.rs  runner.rs
crates/suaegi-forge/src/github_http/: classify.rs  eligibility.rs  forge.rs  mod.rs  parse.rs  transport.rs
crates/suaegi-forge/src/gitlab/: classify.rs  eligibility.rs  forge.rs  mod.rs  parse.rs  runner.rs
crates/suaegi-forge/tests/: eligibility_test.rs  github_test.rs  gitlab_test.rs  glab_preflight_test.rs  pr_actions_test.rs  preflight_test.rs
crates/suaegi-forge/tests/fixture/: mod.rs
crates/suaegi-forge/tests/glab_fixture/: mod.rs
crates/suaegi-fuzzy/: Cargo.toml
crates/suaegi-fuzzy/src/: lib.rs
crates/suaegi-git/: Cargo.toml
crates/suaegi-git/src/: branch.rs  commit_show.rs  compare.rs  conflict.rs  fs.rs  history.rs  lib.rs  quick_open.rs  refname.rs  remote.rs  repo_probe.rs  runner.rs  status.rs  worktree.rs  worktree_name.rs  write_ops.rs
crates/suaegi-git/tests/: branch_test.rs  commit_show_test.rs  compare_test.rs  conflict_test.rs  history_test.rs  remote_fetchpull_test.rs  remote_forcelease_test.rs  remote_push_test.rs  remote_test.rs  repo_probe_test.rs  runner_test.rs  status_test.rs  worktree_test.rs  write_ops_test.rs
crates/suaegi-git/tests/fixture/: mod.rs
crates/suaegi-http/: Cargo.toml
crates/suaegi-http/src/: lib.rs
crates/suaegi-keys/: Cargo.toml
crates/suaegi-keys/src/: chord.rs  conflicts.rs  file.rs  format.rs  lib.rs  normalize.rs  registry.rs  resolve.rs
crates/suaegi-keys/src/conflicts/: tests.rs
crates/suaegi-keys/src/file/: tests.rs
crates/suaegi-keys/src/resolve/: tests.rs
crates/suaegi-search/: Cargo.toml
crates/suaegi-search/src/: clamp.rs  constants.rs  driver.rs  git_grep_args.rs  glob.rs  ingest.rs  js_trim.rs  lib.rs  match_count.rs  path.rs  regex_escape.rs  rg_args.rs  submatch.rs  types.rs
crates/suaegi-secrets/: Cargo.toml
crates/suaegi-secrets/src/: backend.rs  env.rs  lib.rs  secret.rs
crates/suaegi-secrets/tests/: secrets_test.rs
crates/suaegi-term/: Cargo.toml
crates/suaegi-term/src/: agent.rs  encode.rs  grid.rs  input_types.rs  lib.rs  presence.rs  pty.rs  session.rs
crates/suaegi-term/tests/: grid_test.rs  latency_bench.rs  presence_test.rs  pty_test.rs  session_test.rs
crates/suaegi-term/tests/platform/: mod.rs
crates/suaegi-tracker/: Cargo.toml
crates/suaegi-tracker/src/: common.rs  lib.rs  link.rs
crates/suaegi-tracker/src/jira/: adf.rs  classify.rs  client.rs  mod.rs  model.rs
crates/suaegi-tracker/src/linear/: classify.rs  client.rs  mod.rs  model.rs  write.rs
docs/: follow-ups.md
docs/superpowers/plans/: 2026-07-20-plan1-core-git.md  2026-07-21-plan2-term.md  2026-07-21-plan3-app-shell.md  2026-07-21-plan4-terminal-widget.md  2026-07-21-plan5-hooks-diff-restore.md  2026-07-22-plan6-agent-registry.md  2026-07-22-plan7-source-control.md  2026-07-23-git-write-ops.md  2026-07-23-issue-trackers.md  2026-07-23-keybindings.md  2026-07-23-plan9-editor-filetree.md  2026-07-23-quick-open.md  2026-07-24-automation-schedules.md  2026-07-24-git-depth.md  2026-07-24-git-remote.md  2026-07-24-text-search.md
docs/superpowers/research/: 2026-07-21-plan4-terminal-widget.md  2026-07-21-plan5-hooks-diff-restore.md  2026-07-22-plan6-agent-registry.md  2026-07-22-plan7-source-control.md  2026-07-22-plan8-pty-daemon.md  2026-07-23-git-write-ops.md  2026-07-23-issue-trackers.md  2026-07-23-keybinding-resolution.md  2026-07-23-plan9-editor-filetree.md  2026-07-23-quick-open.md  2026-07-24-automation-schedules.md  2026-07-24-git-depth.md  2026-07-24-git-remote.md  2026-07-24-text-search.md
docs/superpowers/specs/: 2026-07-20-suaegi-mvp-design.md
spikes/iced-spike/: Cargo.toml
spikes/iced-spike/src/: main.rs
spikes/tauri-spike/: index.html  package.json  pnpm-lock.yaml
spikes/tauri-spike/src/: main.ts  styles.css
spikes/tauri-spike/src-tauri/: Cargo.toml  tauri.conf.json
spikes/tauri-spike/src-tauri/src/: lib.rs  main.rs
