[workspace]
resolver = "2"
members = ["crates/suaegi-core", "crates/suaegi-git"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "time", "rt-multi-thread", "macros", "io-util"] }
dirs = "6"
tempfile = "3"
libc = "0.2"
