[workspace]
resolver = "2"
members = ["crates/suaegi-core", "crates/suaegi-git", "crates/suaegi-term", "crates/suaegi-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "time", "rt-multi-thread", "macros", "io-util"] }
dirs = "6"
tempfile = "3"
libc = "0.2"
portable-pty = "0.9"
alacritty_terminal = "0.25.1"
crossbeam-channel = "0.5"
iced = { version = "0.14", features = ["tokio", "canvas", "advanced", "lazy"] }
futures = "0.3"
