[workspace]
resolver = "2"
members = ["crates/suaegi-core", "crates/suaegi-git", "crates/suaegi-forge", "crates/suaegi-http", "crates/suaegi-secrets", "crates/suaegi-tracker", "crates/suaegi-term", "crates/suaegi-app", "crates/suaegi-keys", "crates/suaegi-fuzzy", "crates/suaegi-automation", "crates/suaegi-search"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["process", "time", "rt-multi-thread", "macros", "io-util", "fs"] }
dirs = "6"
tempfile = "3"
libc = "0.2"
portable-pty = "0.9"
alacritty_terminal = "0.25.1"
crossbeam-channel = "0.5"
iced = { version = "0.14", features = ["tokio", "canvas", "advanced", "lazy"] }
futures = "0.3"
# hook 헤더의 pane 키 인코딩. 손으로 짜지 않는 이유는 **엄격 디코딩**이 요구사항이라서다
# (URL_SAFE_NO_PAD). 관대한 디코더는 패딩 유무가 어긋나도 통과시켜 버린다.
base64 = "0.22"
# 7a-2b HTTP GitHub 백엔드용. rustls(ring)만 — native-tls/OpenSSL·cmake 의존을 피한다.
# blocking이 아니라 async: forge 트레잇이 async_trait이고 앱이 tokio 위에서 돈다.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# suaegi-automation leaf crate. Orca의 스케줄 산술이 전부 로컬 wall-clock
# (getHours/getDate/getDay/setHours)이라, ambient Local(F2 금지) 대신 명시 IANA TZ를
# 주입해 결정론적으로 재현한다. clock 피처는 끈다 — Local/now 접근을 컴파일 단에서 차단.
chrono = { version = "0.4", default-features = false, features = ["std"] }
chrono-tz = "0.10"
