[package]
name = "suaegi-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
suaegi-core = { path = "../suaegi-core" }
suaegi-git = { path = "../suaegi-git" }
suaegi-term = { path = "../suaegi-term" }
# 스냅샷 셀이 Color/Flags/CursorShape를 재수출 없이 노출하므로 직접 의존한다
alacritty_terminal = { workspace = true }
iced = { workspace = true }
futures = { workspace = true }
# 세션 스트림 페이싱에 tokio::time::sleep이 필요하다 (std::thread::sleep은 async 워커를 막는다)
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
