[package]
name = "suaegi-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
suaegi-core = { path = "../suaegi-core" }
suaegi-git = { path = "../suaegi-git" }
suaegi-term = { path = "../suaegi-term" }
# Plan 7a: GitHub PR 상태/생성. gh CLI shell-out은 이 크레이트 뒤에서만 일어난다.
suaegi-forge = { path = "../suaegi-forge" }
# Tracker UI(N1 Linear): 이슈 읽기 + 워크트리 링크. 네트워크는 이 크레이트 뒤에서만.
suaegi-tracker = { path = "../suaegi-tracker" }
# Linear API 키 저장(키체인, 평문 JSON 금지). forge는 gh CLI라 안 쓰지만 Linear는 여기 쓴다.
suaegi-secrets = { path = "../suaegi-secrets" }
# LinearClient에 주입할 실 전송(ReqwestTransport). 테스트는 tracker 크레이트가 FakeTransport로 덮는다.
suaegi-http = { path = "../suaegi-http" }
# 스냅샷 셀이 Color/Flags/CursorShape를 재수출 없이 노출하므로 직접 의존한다
alacritty_terminal = { workspace = true }
iced = { workspace = true }
futures = { workspace = true }
# 세션 스트림 페이싱에 tokio::time::sleep이 필요하다 (std::thread::sleep은 async 워커를 막는다)
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# hook 서버가 pane 키 헤더를 엄격히 디코딩한다 (URL_SAFE_NO_PAD)
base64 = { workspace = true }
thiserror = { workspace = true }
# 부팅 시 데이터 파일의 기본 위치(OS별 config dir) 계산에 쓴다 — suaegi-core도
# 같은 크레이트를 홈 디렉터리 기본값 계산에 쓴다.
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

# Task 5 — 행당 `with_spans` vs 셀당 `fill_text`. 플랜이 이 선택을 추측으로
# 정하는 것을 금지하므로 실측한다. criterion을 끌어오지 않고 직접 잰다 —
# 재는 것이 두 경로의 비율 하나뿐이라 통계 하네스가 값을 더하지 않는다.
[[bench]]
name = "render_paths"
harness = false
