[package]
name = "suaegi-keys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Why: leaf crate. Deliberately depends on NOTHING from suaegi (no iced, no tokio,
# no suaegi-term/-core). The keybinding registry + parser + formatter must stay a
# pure String<->struct layer so every function is mutation-verifiable in isolation.
# serde_json/tempfile back the M5 file layer (own atomic temp+rename, F3 — no
# suaegi-core::Store dependency, preserving leaf isolation).
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
