[package]
name = "suaegi-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Why: content-search backend (rg `--json` + git-grep fallback) — the pure
# arg-builder + stream-parser half of Orca's `src/shared/text-search.ts`. Peer
# of the already-ported Quick Open (suaegi-fuzzy). M1 was the pure foundation:
# types, constants, path/glob/regex string helpers, match-count normalization —
# serde only. M2 adds the argv builders + submatch locator (the `regex` dep).
# serde_json/tokio arrive with M3/M4 (stream parser, drivers), NOT here.
[dependencies]
serde = { workspace = true }
# Why: M2 `build_submatch_regex` — best-effort locator that re-scans a git-grep
# match line for all occurrence columns (git grep reports only the first hit per
# line). NOT a JS/ERE validator: a compile failure yields `None` → whole-line
# highlight fallback (plan C2/C3). fixed-string queries are escaped via
# `escape_regex` before compiling, so `.`/`*` match literally.
regex = { workspace = true }

[dev-dependencies]
# Why: pin the camelCase wire shape (Orca IPC parity) in a committed test. serde_json
# becomes a real dependency in M3 (rg `--json` parsing); here it is test-only.
serde_json = { workspace = true }
