[package]
name = "suaegi-term"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
suaegi-core = { path = "../suaegi-core" }
portable-pty = { workspace = true }
alacritty_terminal = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }
